# ice-tests

./: .editorconfig  .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
docs/: aggregate-strategy.md  ci-strategy.md  domain-boundaries.md  naming-conventions.md  philosophy.md  product-testing.md  running-tests.md  test-levels.md
domains/ice_ai/contract/agent_spec/: test_agent_spec_backward_compat.py  test_agent_spec_shape.py
domains/ice_ai/contract/event_shapes/: test_decision_event_shape.py  test_routing_event_shape.py
domains/ice_ai/contract/memory_contracts/: test_memory_contract_shape.py  test_memory_scope_rules.py
domains/ice_ai/unit/agents/: test_agent_catalog.py  test_agent_spec.py  test_capabilities.py  test_prompts.py
domains/ice_ai/unit/llm/: test_modes.py  test_roles.py  test_scoring.py
domains/ice_ai/unit/memory/: test_contracts.py  test_usage_policy.py
domains/ice_ai/unit/reasoning/: test_decision.py  test_planner.py  test_routing.py  test_task_graph.py
domains/ice_ai/unit/utils/: test_introspection.py
tooling/pytest/: conftest.py  markers.py
